--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="container">
 		<nav>
-			<a class="logo" href="#">Kevin gallery!</a>
+			<a class="logo" href="#"><img src="./img/logo.png"  width="60%" alt=""></a>
 			<div class="links">
 				<a href="#">Home</a>
 				<a href="#">Gallery</a>
@@ -30,107 +30,260 @@
 				<img src="img/cigarette.jpeg" alt="">
 				<div class="btns">
 					<a href="#" class="btn btn1">Buy Now</a>
-					<a href="#" class="btn btn2">See More</a>
+					<a href="#portfolio-item-1" class="btn btn2">See More</a>
 				</div>
 			</div><div class="card">
 				<img src="img/couteau.jpg" alt="">
 				<div class="btns">
 					<a href="#" class="btn btn1">Buy Now</a>
-					<a href="#" class="btn btn2">See More</a>
+					<a href="#portfolio-item-2" class="btn btn2">See More</a>
 				</div>
 			</div><div class="card">
 				<img src="img/dame.jpeg" alt="">
 				<div class="btns">
-					<a href="#" class="btn btn1">Buy Now</a>
-					<a href="#" class="btn btn2">See More</a>
+					<a href="#p" class="btn btn1">Buy Now</a>
+					<a href="#portfolio-item-3" class="btn btn2">See More</a>
 				</div>
 			</div><div class="card">
 				<img src="img/dameColor.jpeg" alt="">
 				<div class="btns">
 					<a href="#" class="btn btn1">Buy Now</a>
-					<a href="#" class="btn btn2">See More</a>
+					<a href="#portfolio-item-4" class="btn btn2">See More</a>
 				</div>
 			</div><div class="card">
-				<img src="img/darkMaul.jpg" alt="">
+				<img src="img/darkmaul.jpg" alt="">
 				<div class="btns">
 					<a href="#" class="btn btn1">Buy Now</a>
-					<a href="#" class="btn btn2">See More</a>
+					<a href="#portfolio-item-5" class="btn btn2">See More</a>
 				</div>
 			</div><div class="card">
 				<img src="img/draw.jpeg" alt="">
 				<div class="btns">
 					<a href="#" class="btn btn1">Buy Now</a>
-					<a href="#" class="btn btn2">See More</a>
+					<a href="#portfolio-item-6" class="btn btn2">See More</a>
 				</div>
 			</div><div class="card">
 				<img src="img/driver.jpeg" alt="">
 				<div class="btns">
 					<a href="#" class="btn btn1">Buy Now</a>
-					<a href="#" class="btn btn2">See More</a>
+					<a href="#portfolio-item-7" class="btn btn2">See More</a>
 				</div>
 			</div><div class="card">
 				<img src="img/langue.jpg" alt="">
 				<div class="btns">
 					<a href="#" class="btn btn1">Buy Now</a>
-					<a href="#" class="btn btn2">See More</a>
+					<a href="#portfolio-item-8" class="btn btn2">See More</a>
 				</div>
 			</div><div class="card">
 				<img src="img/lapino.jpeg" alt="">
 				<div class="btns">
 					<a href="#" class="btn btn1">Buy Now</a>
-					<a href="#" class="btn btn2">See More</a>
+					<a href="#portfolio-item-9" class="btn btn2">See More</a>
 				</div>
 			</div><div class="card">
 				<img src="img/mage.jpg" alt="">
 				<div class="btns">
 					<a href="#" class="btn btn1">Buy Now</a>
-					<a href="#" class="btn btn2">See More</a>
+					<a href="#portfolio-item-10" class="btn btn2">See More</a>
 				</div>
 			</div><div class="card">
 				<img src="img/moustache.jpeg" alt="">
 				<div class="btns">
 					<a href="#" class="btn btn1">Buy Now</a>
-					<a href="#" class="btn btn2">See More</a>
+					<a href="#portfolio-item-11" class="btn btn2">See More</a>
 				</div>
 			</div><div class="card">
 				<img src="img/panda.jpeg" alt="">
 				<div class="btns">
 					<a href="#" class="btn btn1">Buy Now</a>
-					<a href="#" class="btn btn2">See More</a>
+					<a href="#portfolio-item-12" class="btn btn2">See More</a>
 				</div>
 			</div><div class="card">
 				<img src="img/pokemon.jpeg" alt="">
 				<div class="btns">
 					<a href="#" class="btn btn1">Buy Now</a>
-					<a href="#" class="btn btn2">See More</a>
+					<a href="#portfolio-item-13" class="btn btn2">See More</a>
 				</div>
 			</div><div class="card">
 				<img src="img/rickMorty.jpeg" alt="">
 				<div class="btns">
 					<a href="#" class="btn btn1">Buy Now</a>
-					<a href="#" class="btn btn2">See More</a>
+					<a href="#portfolio-item-14" class="btn btn2">See More</a>
 				</div>
 			</div><div class="card">
 				<img src="img/samourai.jpg" alt="">
 				<div class="btns">
 					<a href="#" class="btn btn1">Buy Now</a>
-					<a href="#" class="btn btn2">See More</a>
+					<a href="#portfolio-item-15" class="btn btn2">See More</a>
 				</div>
 			</div><div class="card">
 				<img src="img/sebisto.jpg" alt="">
 				<div class="btns">
 					<a href="#" class="btn btn1">Buy Now</a>
-					<a href="#" class="btn btn2">See More</a>
+					<a href="#portfolio-item-16" class="btn btn2">See More</a>
 				</div>
 			</div><div class="card">
 				<img src="img/spaceship.jpg" alt="">
 				<div class="btns">
 					<a href="#" class="btn btn1">Buy Now</a>
-					<a href="#" class="btn btn2">See More</a>
+					<a href="#portfolio-item-17" class="btn btn2">See More</a>
 				</div>
 			</div>
 		</section>
+<div class="portfolio-lightbox" id="portfolio-item-1">
+  <div class="portfolio-lightbox__content">
+  <a href="#portfolio" class="close"></a> 
+  <img class="portfolio-lightbox__image" src="./img/cigarette.jpeg" alt="">
+  <h3 class="portfolio__title">This is the title</h3>
+  <p class="portfolio__body">This would be a description of the portfolio item</p>
+  </div>
+</div> 
+
+<div class="portfolio-lightbox" id="portfolio-item-2">
+  <div class="portfolio-lightbox__content">
+    <a href="#portfolio" class="close"></a>
+    <img class="portfolio-lightbox__image" src="./img/couteau.jpg" alt="">
+    <h3 class="portfolio__title">This is the title</h3>
+    <p class="portfolio__body">This would be a description of the portfolio item</p>
+  </div>
+</div> 
+
+<div class="portfolio-lightbox" id="portfolio-item-3">
+  <div class="portfolio-lightbox__content">
+  <a href="#portfolio" class="close"></a>
+  <img class="portfolio-lightbox__image" src="./img/dame.jpeg" alt="">
+  <h3 class="portfolio__title">This is the title</h3>
+  <p class="portfolio__body">This would be a description of the portfolio item</p>
+  </div>
+</div> 
+
+<div class="portfolio-lightbox" id="portfolio-item-4">
+	<div class="portfolio-lightbox__content">
+	<a href="#portfolio" class="close"></a>
+	<img class="portfolio-lightbox__image" src="./img/dameColor.jpeg" alt="">
+	<h3 class="portfolio__title">This is the title</h3>
+	<p class="portfolio__body">This would be a description of the portfolio item</p>
 	</div>
+  </div> 
+
+<div class="portfolio-lightbox" id="portfolio-item-5">
+	<div class="portfolio-lightbox__content">
+	<a href="#portfolio" class="close"></a>
+	<img class="portfolio-lightbox__image" src="./img/darkmaul.jpg" alt="">
+	<h3 class="portfolio__title">This is the title</h3>
+	<p class="portfolio__body">This would be a description of the portfolio item</p>
+	</div>
+  </div> 
+
+<div class="portfolio-lightbox" id="portfolio-item-6">
+	<div class="portfolio-lightbox__content">
+	<a href="#portfolio" class="close"></a>
+	<img class="portfolio-lightbox__image" src="./img/draw.jpeg" alt="">
+	<h3 class="portfolio__title">This is the title</h3>
+	<p class="portfolio__body">This would be a description of the portfolio item</p>
+	</div>
+  </div> 
+
+<div class="portfolio-lightbox" id="portfolio-item-7">
+	<div class="portfolio-lightbox__content">
+	<a href="#portfolio" class="close"></a>
+	<img class="portfolio-lightbox__image" src="./img/driver.jpeg" alt="">
+	<h3 class="portfolio__title">This is the title</h3>
+	<p class="portfolio__body">This would be a description of the portfolio item</p>
+	</div>
+  </div> 
+
+<div class="portfolio-lightbox" id="portfolio-item-8">
+	<div class="portfolio-lightbox__content">
+	<a href="#portfolio" class="close"></a>
+	<img class="portfolio-lightbox__image" src="./img/langue.jpg" alt="">
+	<h3 class="portfolio__title">This is the title</h3>
+	<p class="portfolio__body">This would be a description of the portfolio item</p>
+	</div>
+  </div> 
+
+<div class="portfolio-lightbox" id="portfolio-item-9">
+	<div class="portfolio-lightbox__content">
+	<a href="#portfolio" class="close"></a>
+	<img class="portfolio-lightbox__image" src="./img/lapino.jpeg" alt="">
+	<h3 class="portfolio__title">This is the title</h3>
+	<p class="portfolio__body">This would be a description of the portfolio item</p>
+	</div>
+  </div> 
+
+<div class="portfolio-lightbox" id="portfolio-item-10">
+	<div class="portfolio-lightbox__content">
+	<a href="#portfolio" class="close"></a>
+	<img class="portfolio-lightbox__image" src="./img/mage.jpg" alt="">
+	<h3 class="portfolio__title">This is the title</h3>
+	<p class="portfolio__body">This would be a description of the portfolio item</p>
+	</div>
+  </div> 
+
+<div class="portfolio-lightbox" id="portfolio-item-11">
+	<div class="portfolio-lightbox__content">
+	<a href="#portfolio" class="close"></a>
+	<img class="portfolio-lightbox__image" src="./img/moustache.jpeg" alt="">
+	<h3 class="portfolio__title">This is the title</h3>
+	<p class="portfolio__body">This would be a description of the portfolio item</p>
+	</div>
+  </div> 
+
+<div class="portfolio-lightbox" id="portfolio-item-12">
+	<div class="portfolio-lightbox__content">
+	<a href="#portfolio" class="close"></a>
+	<img class="portfolio-lightbox__image" src="./img/panda.jpeg" alt="">
+	<h3 class="portfolio__title">This is the title</h3>
+	<p class="portfolio__body">This would be a description of the portfolio item</p>
+	</div>
+  </div> 
+
+<div class="portfolio-lightbox" id="portfolio-item-13">
+	<div class="portfolio-lightbox__content">
+	<a href="#portfolio" class="close"></a>
+	<img class="portfolio-lightbox__image" src="./img/pokemon.jpeg" alt="">
+	<h3 class="portfolio__title">This is the title</h3>
+	<p class="portfolio__body">This would be a description of the portfolio item</p>
+	</div>
+  </div> 
+
+<div class="portfolio-lightbox" id="portfolio-item-14">
+	<div class="portfolio-lightbox__content">
+	<a href="#portfolio" class="close"></a>
+	<img class="portfolio-lightbox__image" src="./img/rickMorty.jpeg" alt="">
+	<h3 class="portfolio__title">This is the title</h3>
+	<p class="portfolio__body">This would be a description of the portfolio item</p>
+	</div>
+  </div> 
+
+<div class="portfolio-lightbox" id="portfolio-item-15">
+	<div class="portfolio-lightbox__content">
+	<a href="#portfolio" class="close"></a>
+	<img class="portfolio-lightbox__image" src="./img/samourai.jpg" alt="">
+	<h3 class="portfolio__title">This is the title</h3>
+	<p class="portfolio__body">This would be a description of the portfolio item</p>
+	</div>
+  </div> 
+
+<div class="portfolio-lightbox" id="portfolio-item-16">
+	<div class="portfolio-lightbox__content">
+	<a href="#portfolio" class="close"></a>
+	<img class="portfolio-lightbox__image" src="./img/sebisto.jpg" alt="">
+	<h3 class="portfolio__title">This is the title</h3>
+	<p class="portfolio__body">This would be a description of the portfolio item</p>
+	</div>
+  </div> 
+
+<div class="portfolio-lightbox" id="portfolio-item-17">
+	<div class="portfolio-lightbox__content">
+	<a href="#portfolio" class="close"></a>
+	<img class="portfolio-lightbox__image" src="./img/spaceship.jpg" alt="">
+	<h3 class="portfolio__title">This is the title</h3>
+	<p class="portfolio__body">This would be a description of the portfolio item</p>
+	</div>
+  </div> 
+	</div>
+
 
 	<script src="js/main.js"></script>
 </body>
